--- a/DIGITAL-CLOCK/style.css
+++ b/DIGITAL-CLOCK/style.css
@@ -10,7 +10,7 @@
 .hero{
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(45deg, #08001f, #30197d);
+    background: linear-gradient(180deg,#081b29, #0ef, #081b29);
     color: #fff;
     position: relative;
 }
@@ -27,7 +27,7 @@
 .clock{
     width: 100%;
     height: 100%;
-    background: rgba(235, 0, 255, 0.11);
+    background: rgba(0, 0, 0, 0.093);
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -40,8 +40,8 @@
     content: '';
     width: 180px;
     height: 180px;
-    background: #f41b75;
-    border-radius: 5px;
+    background: #ffef41;
+    border-radius: 50%;
     position: absolute;
     left: -50px;
     top: -50px;
@@ -52,8 +52,8 @@
     content: '';
     width: 180px;
     height: 180px;
-    background: #419aff;
-    border-radius: 50%;
+    background: #f41b1b;
+    border-radius: 5px;
     position: absolute;
     right: -30px;
     bottom: -50px;
