--- a/DIGITAL-CLOCK/WEATHER-APP/style.css
+++ b/DIGITAL-CLOCK/WEATHER-APP/style.css
@@ -49,7 +49,7 @@ body{
     border: 0;
     outline: 0;
     background: var(--color-principal);
-    color: var(--color-secondary);
+    color: var(--color-search);
     padding: 10px 25px;
     height: 60px;
     border-radius: 30px;
@@ -69,4 +69,52 @@ body{
 
 .search button img{
     width: 23px;
+}
+
+.weather-icon{
+    width: 170px;
+    margin-top: 32px;
+}
+
+.weather h1{
+    font-size: 80px;
+    font-weight: 500;
+}
+
+.weather h2{
+    font-size: 40px;
+    font-weight: 400;
+    margin-top: -10px;
+}
+
+.details{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    margin-top: 40px;
+}
+
+.col{
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
+
+.col img{
+    width: 45px;
+    margin-right: 11px;
+}
+
+.weather{
+    display: none;
+}
+
+.error{
+    text-align: left;
+    color: var(--color-principal);
+    margin-left: 10px;
+    font-size: 10px;
+    margin-top: 10px;
+    display: none;
 }
