--- a/DIGITAL-CLOCK/QR-GENERATOR/style.css
+++ b/DIGITAL-CLOCK/QR-GENERATOR/style.css
@@ -1,8 +1,8 @@
 /* VARIABLES DEFINITION */
 
 :root{
-    --color-principal: #c5ebe6;
-    --color-secondary: #f5f0ef;
+    --color-principal: #dbf1ee;
+    --color-secondary: #26e0d7;
 
     --color-background: #081b29;
     --color-background2: #0ef;
@@ -33,26 +33,40 @@ body{
     transform: translate(-50%, -50%);
     background: linear-gradient(180deg, #081b29, #0ef, #081b29);
     border-radius: 10px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
 }
 
 .container p{
     font-weight: 500;
     font-size: 22px;
-    color: var(--color-background);
+    color: var(--color-principal);
     margin-bottom: 10px;
 }
 
 .container input{
     width: 100%;
     height: 45px;
-    border: 1px solid var(--color-background2);
+    margin-bottom: 6px;
+    border: 1px solid var(--color-background);
     outline: 0;
     padding: 10px;
     margin: 10px 0 20px;
     border-radius: 6px;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
+    font-size: 16px;
+}
+
+.container button{
+    width: 100%;
+    height: 45px;
+    background: var(--color-background);
+    color: var(--color-principal);
+    border: 0;
+    outline: 0;
+    border-radius: 6px;
+    box-shadow: 0 10px 10px rgba(0, 238, 255, 0.603);
     cursor: pointer;
     margin: 22px 0;
+    font-size: 16px;
     font-weight: 500;
 }
 
@@ -71,6 +85,27 @@ body{
 
 #imgBox.show-img{
     max-height: 300px;
-    margin: 10px auto;
-    border: 1px solid var(--color-search);
+    margin: 5px auto;
+    border: 1px solid var(--color-background);
+}
+
+.error{
+    animation: shake 0.1s linear 10;
+}
+@keyframes shake{
+    0%{
+        transform: translateX(0);
+    }
+    25%{
+        transform: translateX(-2px);
+    }
+    50%{
+        transform: translateX(0);
+    }
+    75%{
+        transform: translateX(2px);
+    }
+    100%{
+        transform: translateX(0);
+    }
 }
