--- a/DIGITAL-CLOCK/LOGIN 2.0/style.css
+++ b/DIGITAL-CLOCK/LOGIN 2.0/style.css
@@ -86,6 +86,11 @@ body{
     border-color: var(--color-white);
 }
 
+.container button:hover {
+    transform:scale(1.1);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+}
+
 .container form{
     background-color: var(--color-white);
     display: flex;
