--- a/DIGITAL-CLOCK/QR-GENERATOR/style.css
+++ b/DIGITAL-CLOCK/QR-GENERATOR/style.css
@@ -70,6 +70,11 @@ body{
     font-weight: 500;
 }
 
+.container button:hover{
+    transform: scale(1.1);
+    transition: 0.9s;
+}
+
 #imgBox{
     width: 200px;
     border-radius: 5px;
