--- a/DIGITAL-CLOCK/MUSIC-PLAYER/style.css
+++ b/DIGITAL-CLOCK/MUSIC-PLAYER/style.css
@@ -36,6 +36,7 @@
     width: 400px;
     padding: 30px 40px;
     text-align: center;
+    box-shadow: 0 10px 10px var(--color-principal);
 }
 
 nav{
@@ -57,7 +58,7 @@ nav .circle{
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    border: 8px solid var(--color-buttons);
+    border: 7px solid var(--color-buttons);
     box-shadow: 0 1px 10px rgba(26, 232, 255, 0.885);
 }
 
@@ -89,6 +90,10 @@ nav .circle{
     height: 20px;
     border-radius: 50%;
     border: 3px solid var(--color-principal);
+    cursor: pointer;
+    transition: all 0.6s ease-in-out;
+}
+#progress::-webkit-slider-thumb:hover{
     box-shadow: 0 2px 2px rgba(0, 3, 3, 0.885);
 }
 
@@ -107,13 +112,20 @@ nav .circle{
     justify-content: center;
     border-radius: 50%;
     color: var(--color-background);
-    box-shadow: 0 3px 3px rgba(0, 3, 3, 0.885);
     cursor: pointer;
+    transition: all 0.6s ease-in-out;
+}
+.controls div:hover{
+    box-shadow: 0 3px 5px var(--color-buttons);
 }
 
 .controls div:nth-child(2){
     transform: scale(1.5);
     background: var(--color-buttons);
     color: var(--color-principal);
-    box-shadow: 0 3px 3px rgba(1, 252, 252, 0.885);
+
 }
+.controls div:nth-child(2):hover{
+    box-shadow: 0 3px 5px var(--color-principal)
+}
+
